@@ -73,13 +73,13 @@ public:
     void toggle(const QModelIndex &idx);
     QModelIndexList selectedIndexes() const;
     void dropEvent(QDropEvent *event);
-    void coverRetrieved(const QString &artist, const QString &album);
     void collectionRemoved(quint32 key);
     void expandAll();
     void expand(const QModelIndex &idx);
 
 public Q_SLOTS:
     void updateRows(const QModelIndex &parent);
+    void coverRetrieved(const QString &artist, const QString &album);
 
 private Q_SLOTS:
     void itemClicked(const QModelIndex &index);
